--- a/contact.html
+++ b/contact.html
@@ -1,187 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/js/bootstrap.min.js">
-    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap-5.1.3-dist/js/bootstrap.min.js" />
+    <link
+      rel="stylesheet"
+      href="./bootstrap-5.1.3-dist/css/bootstrap.min.css"
+    />
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <script src="ext.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="container-sm">
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow">
-                <div class="container-sm">
-                    <a class="navbar-brand" href="./index.html"><img src="./images/logo.png" style="height: 50px;" alt=""></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="./contact.html">Contact</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Services
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#" onclick="service()">Termite Control</a></li>
-                                    <li><a class="dropdown-item" href="#" onclick="service()">Pest Control</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
+      <div class="container-sm">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow">
+          <div class="container-sm">
+            <a class="navbar-brand" href="./index.html"
+              ><img src="./images/logo.png" style="height: 50px;" alt=""
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="./index.html"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Services
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="service()"
+                        >Termite Control</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#" onclick="service()"
+                        >Pest Control</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="navbar-brand"
+                    href="https://instagram.com/intermite.termitecontrol?igshid=YmMyMTA2M2y="
+                    target="_blank"
+                  >
+                    <img
+                      src="./images/ig.png"
+                      style="height: 20px; margin-top: 1vh;"
+                      alt="ig"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
     </header>
 
-
-
     <section class="breadcrumb-area">
-        <div class="container-sm">
-            <div class="my-breadcumb">
-                <nav aria-label="breadcrumb">
-                    <div class="judul-contact">
-                        <h2>Contact</h2>
-                    </div>
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Contact</li>
-                    </ol>
-                </nav>
+      <div class="container-sm">
+        <div class="my-breadcumb">
+          <nav aria-label="breadcrumb">
+            <div class="judul-contact">
+              <h2>Contact</h2>
             </div>
-
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page">
+                Contact
+              </li>
+            </ol>
+          </nav>
         </div>
+      </div>
     </section>
 
     <section id="contact" class="contact">
-        <div class="container-sm">
-            <div class="row mb-5">
-                <div class="col text-center">
-                    <h2>Contact</h2>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-lg-4 text-center">
-                    <div class="card text-black mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title">Title</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                eiusmod
-                                tempor.</p>
-                        </div>
-                    </div>
-                    <ul class="list-group">
-                        <li class="list-group-item">Location</li>
-                        <li class="list-group-item">My Office</li>
-                        <li class="list-group-item">Jl. Intermite</li>
-                        <li class="list-group-item">Surabaya</li>
-                        <li class="list-group-item">Bali</li>
-                    </ul>
-                </div>
-
-                <div class="col-md-6">
-                    <form>
-                        <div class="form-group">
-                            <label for="nama">Nama Lengkap</label>
-                            <input type="text" class="form-control" id="nama">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-mail</label>
-                            <input type="text" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="telp">No. Telepon</label>
-                            <input type="text" class="form-control" id="telp">
-                        </div>
-                        <div class="form-group">
-                            <label for="pesan">Pesan</label>
-                            <textarea name="pesan" id="pesan" class="form-control"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button type="button" class="kirim btn mt-4">Kirim!</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+      <div class="container-sm">
+        <div class="row mb-5">
+          <div class="col text-center">
+            <h2>Contact</h2>
+          </div>
         </div>
+
+        <div class="row justify-content-center">
+          <div class="col-lg-4 text-center">
+            <div class="card text-black mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Title</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor.
+                </p>
+              </div>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">Location</li>
+              <li class="list-group-item">My Office</li>
+              <li class="list-group-item">Jl. Intermite</li>
+              <li class="list-group-item">Surabaya</li>
+              <li class="list-group-item">Bali</li>
+            </ul>
+          </div>
+
+          <div class="col-md-6">
+            <form>
+              <div class="form-group">
+                <label for="nama">Nama Lengkap</label>
+                <input type="text" class="form-control" id="nama" />
+              </div>
+              <div class="form-group">
+                <label for="email">E-mail</label>
+                <input type="text" class="form-control" id="email" />
+              </div>
+              <div class="form-group">
+                <label for="telp">No. Telepon</label>
+                <input type="text" class="form-control" id="telp" />
+              </div>
+              <div class="form-group">
+                <label for="pesan">Pesan</label>
+                <textarea
+                  name="pesan"
+                  id="pesan"
+                  class="form-control"
+                ></textarea>
+              </div>
+              <div class="form-group">
+                <button type="button" class="kirim btn mt-4">Kirim!</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
 
-
     <footer>
-        <div class="footer-info container-sm">
-            <div class="row">
-                <div class="col-sm-4 pt-5">
-                    <a class="navbar-brand" href="#"><img src="./images/logo.png" style="height: 80px;" alt=""></a>
-                </div>
-                <div class="col-sm pt-5">
-                    <ul class="list-unstyled nav-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm pt-5">
-                    <ul class="list-unstyled nav-links">
-                        <li><a href="#">Clients</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Career</a></li>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Journal</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm pt-5">
-                    <ul class="list-unstyled nav-links">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms &amp; Conditions</a></li>
-                        <li><a href="#">Partners</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm pt-5 text-md-center">
-                    <ul class="social list-unstyled">
-                        <li><a href="#"><span class="icon-instagram"></span></a></li>
-                        <li><a href="#"><span class="icon-twitter"></span></a></li>
-                        <li><a href="#"><span class="icon-facebook"></span></a></li>
-                        <li><a href="#"><span class="icon-pinterest"></span></a></li>
-                        <li><a href="#"><span class="icon-dribbble"></span></a></li>
-                    </ul>
-                    <p class=""><a href="#" class="btn btn-tertiary">Contact Us</a></p>
-                </div>
-            </div>
-
-            <div class="row ">
-                <div class="col-12 text-center">
-                    <div class="copyright mt-2 pt-5">
-                        <p><small>&copy; 2021 All Rights Reserved.</small></p>
-                    </div>
-                </div>
-            </div>
+      <div class="footer-info container-sm">
+        <div class="row">
+          <div class="col-sm-4 pt-5">
+            <a class="navbar-brand" href="#"
+              ><img src="./images/logo.png" style="height: 80px;" alt=""
+            /></a>
+          </div>
+          <div class="col-sm pt-5">
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-sm pt-5">
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">Clients</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="#">Testimonials</a></li>
+              <li><a href="#">Journal</a></li>
+            </ul>
+          </div>
+          <div class="col-sm pt-5">
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms &amp; Conditions</a></li>
+              <li><a href="#">Partners</a></li>
+            </ul>
+          </div>
+          <div class="col-sm pt-5 text-md-center">
+            <ul class="social list-unstyled">
+              <li>
+                <a href="#"><span class="icon-instagram"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="icon-twitter"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="icon-facebook"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="icon-pinterest"></span></a>
+              </li>
+              <li>
+                <a href="#"><span class="icon-dribbble"></span></a>
+              </li>
+            </ul>
+            <p class=""><a href="#" class="btn btn-tertiary">Contact Us</a></p>
+          </div>
         </div>
+
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="copyright mt-2 pt-5">
+              <p><small>&copy; 2021 All Rights Reserved.</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
